# helved-logs

./: .gitignore  Cargo.toml  Dockerfile  README.md  nais.yml
.github/workflows/: deploy.yml
src/: aggregator.rs  k8s.rs  main.rs  model.rs  probe.rs  slack.rs
