[package]
name = "logs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
k8s-openapi = { version = "0.26.0", features = ["v1_33"] }
kube = { version = "2.0.1", features = ["runtime", "derive"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
log4rs = { version = "1.4.0", features = ["json_encoder"] }
log = "0.4.28"
chrono = "0.4.42"
urlencoding = "2.1.3"
