[package]
name = "logs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
futures = "0.3.32"
k8s-openapi = { version = "0.26.1", features = ["v1_33"] }
kube = { version = "2.0.1", features = ["runtime", "derive"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
log4rs = { version = "1.4.0", features = ["json_encoder"] }
log = "0.4.29"
chrono = "0.4.44"
urlencoding = "2.1.3"
