[package]
name = "logs"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
futures = "0.3.32"
k8s-openapi = { version = "0.27.1", features = ["v1_35"] }
kube = { version = "3.1.0", features = ["runtime", "derive"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
log4rs = { version = "1.4.0", features = ["json_encoder"] }
log = "0.4.29"
chrono = "0.4.44"
urlencoding = "2.1.3"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
regex = "1.10"
